add nav styling for modile and desktop

--- a/index.html
+++ b/index.html
@@ -6,8 +6,24 @@
     <title>Header Bar</title>
   </head>
   <body>
-    <h1>Header Bar</h1>
-
+    <header>
+      <h1 id="main-header">PATTRN <span>PARTY</span></h1>
+      <h3 id="name">Mike Fenwick</h3>
+    </header>
+    <h3 class="challenge-name">Header Bar</h3>
+    <section id="header-bar-wrapper">
+      <nav class="navbar">
+        <img src="https://dummyimage.com/50x50/f2f2f2/666666.png&text=X" alt="">
+        <button id="nav-toggle-btn">MENU</button>
+        <div id="link-wrapper">
+          <button class="nav-link">Navigation Link 1</button>
+          <button class="nav-link">Navigation Link 2</button>
+          <button class="nav-link">Navigation Link 3</button>
+          <input type="text" placeholder="Seach"/>
+        </div>
+      </nav>
+    </section>
+    <!-- <a id="code-btn" href="https://github.com/Mickyfen17/header-bar" target="_blank">View Code</a> -->
   </body>
   <script type="text/javascript" src="app.js"></script>
 </html>
